environments/prod/calibre-web-automated/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calibre-web-automated
  labels:
    app.kubernetes.io/name: calibre-web-automated
    app.kubernetes.io/instance: calibre-web-automated
