environments/prod/calibre-web-automated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
  namespace: calibre-web-automated
  labels:
    app.kubernetes.io/name: calibre-web-automated
    app.kubernetes.io/instance: calibre-web-automated
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: calibre-web-automated
    app.kubernetes.io/instance: calibre-web-automated
