environments/prod/calibre-web-automated/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web-automated-route
  namespace: calibre-web-automated
  labels:
    app.kubernetes.io/name: calibre-web-automated
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "books.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: calibre-web-automated
          port: 8083
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
